# git-origin-hash

./: .gitignore  Cargo.toml  g-hooks.scm  rustfmt.toml
src/: main.rs
